[workspace]
resolver = "2"

members = [
  "engine",
  "rpc",
  "types",
  "white-list",
]

[workspace.package]
authors = ["Pontem Network"]
edition = "2021"
homepage = "https://pontem.network/"
repository = "https://github.com/pontem-network/lumio-types"
version = "0.1.0"

[workspace.dependencies]
lumio-engine = {path = "engine"}
lumio-p2p = {path = "p2p"}
lumio-types = {path = "types"}

arc-swap = "1.7.1"
bincode = "1.3.3"
borsh = {version = "1", features = ["derive"]}
bs58 = "0.5.1"
derive_more = "0.99"
eyre = "0.6"
futures = "0.3.30"
hex = "0.4"
jsonrpsee = {version = "0.24", features = ["server-core", "client-core", "macros"]}
jsonwebtoken = "9.3"
libp2p = "0.54"
log = "0.4.14"
portpicker = "0.1.1"
rand = "0.8"
reqwest = {version = "0.12.4", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
serde_with = {version = "3", features = ["base64"]}
sha3 = "0.10"
strum = {version = "0.21", features = ["derive"]}
poem = "3.1.3"
thiserror = "1"
tokio = "1.29.1"
tokio-stream = "0.1.16"
tokio-tungstenite = "0.24.0"
tokio-util = "0.7.12"
tracing = "0.1"
tracing-subscriber = "0.3.1"
tungstenite = "0.24.0"
url = "2.5.2"

[workspace.lints.rust]
unused_crate_dependencies = "warn"
