[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
name = "lumio-p2p"
repository.workspace = true
version.workspace = true

[dependencies]
bincode.workspace = true
either = "*"
eyre.workspace = true
futures.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
libp2p = {workspace = true, features = [
  "gossipsub",
  "macros",
  "mdns",
  "noise",
  "quic",
  "serde",
  "tcp",
  "tokio",
  "yamux",
  "identify",
  "pnet",
  "ping",
]}
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["sync", "macros"]}
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true

lumio-types.workspace = true

[dev-dependencies]
portpicker.workspace = true
tokio = {workspace = true, features = ["test-util", "macros"]}
tracing-subscriber = {workspace = true, features = [
  "ansi",
  "env-filter",
  "fmt",
  "tracing-log",
]}

[lints]
workspace = true
