[package]
name = "lumio-p2p"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bincode.workspace = true
eyre.workspace = true
futures.workspace = true
libp2p = { workspace = true, features = [
  "gossipsub",
  "macros",
  "noise",
  "serde",
  "tcp",
  "pnet",
  "tokio",
  "yamux",
] }
tracing.workspace = true
serde.workspace = true
serde_with.workspace = true
tokio = { workspace = true, features = ["sync", "macros"] }
tokio-stream.workspace = true
tokio-util.workspace = true

lumio-types.workspace = true

[dev-dependencies]
portpicker.workspace = true
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "env-filter",
  "fmt",
  "tracing-log",
] }
tokio = { workspace = true, features = ["test-util", "macros"] }
rand.workspace = true

[lints]
workspace = true
