[package]
name = "lumio-rpc"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bincode.workspace = true
eyre.workspace = true
futures.workspace = true
poem = { workspace = true, features = ["websocket"] }
serde.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tungstenite.workspace = true
url.workspace = true

lumio-types.workspace = true

[lints]
workspace = true
