[package]
name = "lumio-rpc"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bincode.workspace = true
eyre.workspace = true
futures.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
poem = { workspace = true, features = ["websocket"] }
poem-grants.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tungstenite.workspace = true
url = { workspace = true, features = ["serde"] }

lumio-types.workspace = true

[dev-dependencies]
portpicker.workspace = true
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "env-filter",
  "fmt",
  "tracing-log",
] }
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
