[package]
name = "lumio-types"
edition.workspace = true

[dependencies]
borsh.workspace = true
derive_more.workspace = true
hex.workspace = true
serde.workspace = true
serde_with.workspace = true
sha3.workspace = true
strum.workspace = true

[dev-dependencies]
rand.workspace = true
serde_json.workspace = true

[lints]
workspace = true
