[package]
edition.workspace = true
name = "lumio-types"

[dependencies]
eyre.workspace = true
borsh.workspace = true
bs58.workspace = true
derive_more.workspace = true
hex.workspace = true
serde.workspace = true
serde_with.workspace = true
sha3.workspace = true
strum.workspace = true

[dev-dependencies]
rand.workspace = true
serde_json.workspace = true

[lints]
workspace = true
