[package]
name = "lumio-white-list"
version = "1.0.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
arc-swap = "1.7.1"
log.workspace = true
lumio-types.workspace = true
reqwest = {version = "0.12.4", features = ["json"]}
tokio.workspace = true
url.workspace = true

[lints]
workspace = true
